--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
     "grunt-ng-annotate": "^0.9.2",
     "grunt-replace": "~0.8.0",
     "grunt-wiredep": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^3.1.0",
     "jshint-stylish": "^1.0.0",
     "load-grunt-tasks": "^3.1.0"
   },
